<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">نرم افزار مدیریت PM مجتمع</string>
    <string name="apk_name">NpatComplexManage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="PhoneNumber">شماره همراه</string>
    <string name="GiveAgreeCode">دریافت کد تایید</string>
    <string name="TitleNameApp">مدیریت بهره برداری رصد</string>
    <string name="TitleLink">عنوان</string>
    <string name="UrlNetwork">آدرس شبکه</string>
    <string name="Save">ذخیره</string>
    <string name="Setting">تنظیمات</string>
    <string name="AddServerAddress">اضافه کردن آدرس سرور</string>
    <string name="title_activity_get_hamkar_list">لیست همکاران</string>
    <string name="title_activity_login">ورود</string>
    <string name="title_activity_accept_code">کد تایید</string>
    <string name="title_activity_accept_work_list">لیست کارهای پذیرش نشده</string>
    <string name="title_activity_accept_work">کار</string>
    <string name="title_activity_my_work_list">لیست کارهای من</string>
    <string name="listworks">پذیرش کار</string>
    <string name="Code">کد</string>
    <string name="Subject">عنوان</string>
    <string name="WorkType">نوع کار</string>
    <string name="Location">موقعیت مشاهده ایراد / خرابی</string>
    <string name="Rade">گروه بندی</string>
    <string name="Description">شرح ایراد / خرابی</string>
    <string name="RequestType">نوع درخواست</string>
    <string name="SelectWork">انتخاب کار</string>
    <string name="Status">وضعیت</string>
    <string name="Assignment">واگذاری به همکار دیگر</string>
    <string name="Finish">اتمام کار</string>
    <string name="Impossible">در شرایط فعلی امکانپذیر نیست</string>
    <string name="title_activity_my_work">شرح کار</string>
    <string name="MyListWork">لیست کارهای من</string>
    <string name="Request">ثبت خرابی یا ایراد</string>
    <string name="History">تاریخچه کارها</string>
    <string name="Edit">ویرایش</string>
    <string name="qrcode">خواندن بارکد</string>
    <string name="requetpic">عکس درخواست</string>
    <string name="RequestSave">ثبت درخواست</string>
    <string name="Pic">تصویر</string>
    <string name="picWork">تصویر کار</string>
    <string name="ReportDuty">گزارش کارهای انجام شده من</string>
    <string name="ReportHamkarDuty">لیست کارهای در حال انجام گروه من</string>
    <string name="FromDate">از تاریخ</string>
    <string name="ToDate">تا تاریخ</string>
    <string name="Apply">اعمال فیلتر</string>
    <string name="title_activity_ReportOtherWorkStatus">لیست کارهای در حال انجام گروه من</string>
    <string name="RequestList">لیست درخواست های من</string>
    <string name="DescRequest">شرح درخواست</string>
    <string name="InsertUser">درخواست کننده</string>
    <string name="NameHamkar">نام همکار</string>
    <string name="ReportDesc">گزارش کار</string>
    <string name="ReportAct">گزارش کار</string>
    <string name="Send">ثبت</string>
    <string name="default_notification_channel_id">PM</string>
    <string name="ReportImage">تصویر گزارش</string>
    <string name="InsertDateOrder">تاریخ درخواست</string>
    <string name="HamkarName">نام همکار</string>
    <string name="SendDate">تاریخ ارجاع</string>
    <string name="ReportDate">تاریخ گزارش</string>
    <string name="version">نسخه</string>

</resources>
