<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/EditTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_edittext"
        android:ems="18"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:hint="@string/PhoneNumber"
        android:textSize="24sp"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextMobile"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_button"
        android:ems="18"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/GiveAgreeCode" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/imgSetting"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnLogin"
        android:src="@drawable/setting"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSetting"
        android:text="@string/Setting"
        android:textColor="@color/colortab1"
        android:layout_below="@+id/imgSetting"
        android:textSize="24sp"
        android:gravity="center"/>

</RelativeLayout>
