<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/Request"
            app:titleTextColor="#ffff"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:gravity="center"
            android:background="@drawable/background_title" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layoutDirection="rtl"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#ffffff"
                    android:text="@string/Request"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:id="@+id/txtUpdate"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center"
                    android:background="@drawable/logout"
                    android:id="@+id/imgExit"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Subject"
            android:textColor="@color/black"
            android:layout_weight="15"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSubject"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Location"
            android:textColor="@color/black"
            android:layout_weight="15"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnLocatio"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:layout_weight="15"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Rade"
            android:textColor="@color/black"
            android:layout_weight="15"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnRade"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:layout_weight="15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RequestType"
            android:textColor="@color/black"
            android:layout_weight="15"/>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnRequestType"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:layout_weight="15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description"
            android:textColor="@color/black"
            android:layout_weight="15"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnTakePic"
            android:text="@string/requetpic"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgRequest"
            android:background="@drawable/rounded_edittext"
            android:text="@string/Request"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layoutDirection="rtl"
        tools:ignore="UselessParent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRequset"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:text="@string/RequestSave"/>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>