<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/DescRequest"
            app:titleTextColor="#ffff"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:gravity="center"
            android:background="@drawable/background_title" >
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Code"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="10"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/barcode" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtCode"
                    android:textColor="@color/black"
                    android:text="0"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Subject"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/subject"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtSubject"
                    android:text="@string/Subject"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/WorkType"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/tools"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtWorkType"
                    android:text="@string/WorkType"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Location"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/addres"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtLocation"
                    android:text="@string/Location"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Rade"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/rade"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtRade"
                    android:text="@string/Rade"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Description"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/description"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtDescription"
                    android:text="@string/Description"
                    android:textColor="@color/black"
                    android:gravity="top|right"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:visibility="gone"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/RequestType"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/tools1"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtRequestType"
                    android:text="@string/RequestType"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Status"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/status"
                    android:layout_weight="10"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtStatus"
                    android:text="@string/Status"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:background="@drawable/rounded_textview_currency1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/picWork"
                    android:textColor="@color/black"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:drawablePadding="10dp"
                    app:drawableRightCompat="@drawable/pic"
                    android:layout_weight="10"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imgWork"
                    android:paddingStart="10dp"
                    android:gravity="center|right"
                    android:layout_weight="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl"
                tools:ignore="UselessParent"
                android:visibility="gone">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFinish"
                    android:background="@drawable/rounded_button"
                    android:text="@string/Finish"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnAssignment"
                    android:background="@drawable/rounded_button"
                    android:text="@string/Assignment"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnImpossible"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/Impossible"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>